--- a/Reviews/appsettings.json
+++ b/Reviews/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ReviewsContext": "Server=(localdb)\\ProjectModels;Database=Reviews.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
